# sleep-progress.rs

./: Cargo.toml  README.md
.github/workflows/: cd.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arg_parse_command.rs  parse_interval.rs
src/: lib.rs  main.rs
