[package]
name = "sleep-progress"
version = "0.1.2"
edition = "2021"
authors= ["Valvassori Moïse <moise.valvassori@gmail.com>"]
description= "delay for a specified amount of time"
license-file = "LICENSE"
homepage = "https://github.com/djedi23/sleep-progress.rs"
repository = "https://github.com/djedi23/sleep-progress.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
indicatif = "0.17.2"
tokio = { version = "1.21.2", features = ["rt","rt-multi-thread", "sync", "time", "macros"] }

arbitrary = { version = "1", optional = true, features = ["derive"] }
miette = { version = "5.4.1", features = ["fancy-no-backtrace"] }
thiserror = "1.0.37"


[profile.release]
opt-level = 3     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
